chore(dca-api): Add Liquibase changelogs for assets and price history tables
Create changelogs to define the `assets` and `price_history` tables with constraints, indexes, and relationships. Remove outdated test changelog and update the master changelog file.

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,6 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/db.changelog-001-create-test-table.yaml
+      file: db/changelog/changes/001-create-assets.yaml
+  - include:
+      file: db/changelog/changes/002-create-price-history.yaml
+
