--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<version>2.2.41</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
@@ -126,12 +132,28 @@
 							<apiPackage>dev.jtristante.dcaapi.api</apiPackage>
 							<modelPackage>dev.jtristante.dcaapi.dto</modelPackage>
 							<configOptions>
-								<interfaceOnly>true</interfaceOnly>
 								<useSpringBoot4>true</useSpringBoot4>
 								<useJakartaEe>true</useJakartaEe>
+								<useRecords>true</useRecords>
+								<openApiNullable>false</openApiNullable>
+								<dateLibrary>java8</dateLibrary>
+								<interfaceOnly>true</interfaceOnly>
 								<skipDefaultInterface>true</skipDefaultInterface>
 							</configOptions>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.5.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
