--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dca-api
-
+internal.api.key=
 # ===============================
 # DATASOURCE (PostgreSQL)
 # ===============================
@@ -7,22 +7,17 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/dca_api_dev
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
 # ===============================
 # LIQUIBASE
 # ===============================
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
-
-
 # ===============================
 # LOGGING SQL
 # ===============================
