chore(dca-api): Add support for RapidAPI integration and Yahoo Finance client
Introduce `RapidApiProperties` for configuration and `YahooFinanceClient` for fetching stock data via the RapidAPI Yahoo Finance service. Add `RapidApiClientConfig` to configure the REST client. Update properties files to include RapidAPI settings, add test configurations, and enable the use of profiles. Enhance status endpoint test with YahooFinanceClient mocking.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=dca-api
-internal.api.key=
+internal.api.key=test
 # ===============================
 # DATASOURCE (PostgreSQL)
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/dca_api_dev
-spring.datasource.username=
+spring.datasource.username=dca_user
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
@@ -23,3 +23,9 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 # ===============================
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# ===============================
+# LOGGING SQL
+# ===============================
+rapidapi.base-url=https://yahoo-finance15.p.rapidapi.com
+rapidapi.key=${RAPIDAPI_YAHOO_FINANCE_KEY}
+rapidapi.host=yahoo-finance15.p.rapidapi.com
