--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ internal.api.key=test
 # DATASOURCE (PostgreSQL)
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/dca_api_dev
-spring.datasource.username=dca_user
-spring.datasource.password=
+spring.datasource.username=${DCA_USER}$
+spring.datasource.password=${DCA_PASSWORD}$
 spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # JPA / HIBERNATE
