feat(symbols): add symbol search API with OpenAPI and integration tests
Introduce `/symbols` endpoint to support searching by name and ticker. Implement `SymbolRepository`, `SymbolService`, `SymbolMapper`, and `SymbolController` for data access and API integration. Enhance OpenAPI spec with API key security and query parameter details. Add integration tests to validate symbol search functionality. Update dependencies and configurations for MapStruct support and improved security handling.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dca-api
-internal.api.key=test
+internal.api.key=${DCA_INTERNAL_API_KEY}
 # ===============================
 # DATASOURCE (PostgreSQL)
 # ===============================
