feat(yahoo-finance): replace RapidAPI client with Yahoo Finance integration and refactor related components
Remove `RapidApiClientConfig` and introduce `YahooFinanceConfig` for managing Yahoo Finance REST client dependencies. Implement `YahooFinanceApi` and `YahooFinanceClient` for fetching stock history with structured DTOs, exception handling, and updated configurations. Migrate application properties to reflect Yahoo Finance settings.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # ===============================
-# LOGGING SQL
+# External APIs
 # ===============================
-rapidapi.base-url=https://yahoo-finance15.p.rapidapi.com
-rapidapi.key=${RAPIDAPI_YAHOO_FINANCE_KEY}
-rapidapi.host=yahoo-finance15.p.rapidapi.com
+rapidapi.yahoo.base-url=https://yahoo-finance15.p.rapidapi.com
+rapidapi.yahoo.key=${RAPIDAPI_YAHOO_FINANCE_KEY}
+rapidapi.yahoo.host=yahoo-finance15.p.rapidapi.com
