--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -18,8 +18,9 @@ spring.jpa.show-sql=false
 # ===============================
 spring.liquibase.enabled=false
 # ===============================
-# RAPIDAPI - Test
+# External APIs - Test
 # ===============================
-rapidapi.base-url=https://yahoo-finance15.p.rapidapi.com
-rapidapi.key=test-rapidapi-key
-rapidapi.host=yahoo-finance15.p.rapidapi.com
+rapidapi.yahoo.base-url=https://yahoo-finance15.p.rapidapi.com
+rapidapi.yahoo.key=test-rapidapi-key
+rapidapi.yahoo.host=yahoo-finance15.p.rapidapi.com
+
