--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,13 +2,6 @@
 spring.application.name=dca-api
 internal.api.key=test-api-key
 # ===============================
-# DATASOURCE (PostgreSQL) - Test
-# ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/dca_api_test
-spring.datasource.username=test
-spring.datasource.password=test
-spring.datasource.driver-class-name=org.postgresql.Driver
-# ===============================
 # JPA / HIBERNATE
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -16,7 +9,8 @@ spring.jpa.show-sql=false
 # ===============================
 # LIQUIBASE
 # ===============================
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.contexts=test
 # ===============================
 # External APIs - Test
 # ===============================
