feat: Implement separated test Liquibase structure with context safety • Create dedicated test changelog structure in src/main/resources/db/changelog/test/ • Add db.changelog-test.yaml with context-filtered test data includes • Implement Option 1: Context-based safety for test-specific changesets • Move test data from test resources to main resources for unified Liquibase management • Update test properties to reference new test changelog with test context • Maintain context: test filtering as additional safety layer Structure now provides clear separation between production schema changes (changes/) and test data (test/) while maintaining single source of truth for Liquibase. All integration tests pass with real database operations and isolated test data.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=false
 # LIQUIBASE
 # ===============================
 spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-test.yaml
 spring.liquibase.contexts=test
 # ===============================
 # External APIs - Test
