--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,20 +1,11 @@
 # Test properties
 spring.application.name=dca-api
 internal.api.key=test-api-key
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
-# ===============================
-# LIQUIBASE
-# ===============================
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-test.yaml
-spring.liquibase.contexts=test
-# ===============================
+
+# LIQUIBASE (DISABLED FOR UNIT TESTS)
+spring.liquibase.enabled=false
+
 # External APIs - Test
-# ===============================
 rapidapi.yahoo.base-url=https://yahoo-finance15.p.rapidapi.com
 rapidapi.yahoo.key=test-rapidapi-key
 rapidapi.yahoo.host=yahoo-finance15.p.rapidapi.com
