Revert "feat: Convert DcaApiApplicationTests to pure unit testing"
This reverts commit 85498ceef413745e7628b33f5ace2f1f722926b4.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,20 @@
 # Test properties
 spring.application.name=dca-api
 internal.api.key=test-api-key
-
-# LIQUIBASE (DISABLED FOR UNIT TESTS)
-spring.liquibase.enabled=false
-
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+# ===============================
+# LIQUIBASE
+# ===============================
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-test.yaml
+spring.liquibase.contexts=test
+# ===============================
 # External APIs - Test
+# ===============================
 rapidapi.yahoo.base-url=https://yahoo-finance15.p.rapidapi.com
 rapidapi.yahoo.key=test-rapidapi-key
 rapidapi.yahoo.host=yahoo-finance15.p.rapidapi.com
