--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           POSTGRES_USER: test
           POSTGRES_PASSWORD: test
         options: >-
-          --health-cmd "pg_isready -U test"
+          --health-cmd pg_isready -U test
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
