--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <java.version>25</java.version>
         <org.mapstruct.version>1.6.3</org.mapstruct.version>
         <sonar.organization>jtristante</sonar.organization>
-        <sonar.projectKey>jtristante_dca-api</sonar.projectKey>
+        <sonar.projectKey>dca-api</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.java.source>25</sonar.java.source>
         <sonar.java.target>25</sonar.java.target>
