--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI - Java Maven Tests with SonarCloud
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [ main, master, develop , 'feature/**' ]
   pull_request:
     branches: [ main, master, develop ]
 jobs:
