--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,46 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Required for SonarCloud
+
       - name: Set up JDK 25
         uses: actions/setup-java@v4
         with:
           java-version: '25'
           distribution: 'temurin'
           cache: maven
+
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
       - name: Run tests and SonarCloud scan
+        id: sonar_scan
         run: |
+          # Ejecuta SonarCloud y espera Quality Gate
           ./mvnw -B clean verify sonar:sonar \
             -Dsonar.projectKey=jtristante_dca-api \
             -Dsonar.organization=jtristante \
             -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.token=${SONAR_TOKEN} \
             -Dsonar.qualitygate.wait=true
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Check SonarCloud Code Smells via API (only if Quality Gate passed)
+        if: success()  # Only executes if the previous step passed
+        run: |
+          SONAR_ORG=jtristante
+          SONAR_PROJECT_KEY=jtristante_dca-api
+
+          echo "Fetching Code Smells from SonarCloud..."
+          total=$(curl -s -u ${{ secrets.SONAR_TOKEN }}: \
+            "https://sonarcloud.io/api/issues/search?organization=$SONAR_ORG&projects=$SONAR_PROJECT_KEY&types=CODE_SMELL&resolved=false&severities=MINOR,MAJOR,CRITICAL&sinceLeakPeriod=true" \
+            | jq '.total')
+
+          echo "Code Smells found: $total"
+
+          if [ "$total" -gt 0 ]; then
+            echo "❌ Build failed due to new Code Smells!"
+            exit 1
+          else
+            echo "✅ No new Code Smells"
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
