--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,16 @@ jobs:
       - name: Check SonarCloud Code Smells via API (only if Quality Gate passed)
         if: success() # Only executes if the previous step passed
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           SONAR_ORG=jtristante
           SONAR_PROJECT_KEY=jtristante_dca-api
 
           echo "Fetching Code Smells from SonarCloud..."
-          total=$(curl -s -u "$SONAR_TOKEN": \
-            "https://sonarcloud.io/api/issues/search?organization=$SONAR_ORG&projects=$SONAR_PROJECT_KEY&types=CODE_SMELL&resolved=false&severities=MINOR,MAJOR,CRITICAL&sinceLeakPeriod=true" \
-            | jq '.total')
+          response=$(curl -f -s -u "$SONAR_TOKEN": \
+            "https://sonarcloud.io/api/issues/search?organization=$SONAR_ORG&projects=$SONAR_PROJECT_KEY&types=CODE_SMELL&resolved=false&severities=MINOR,MAJOR,CRITICAL&sinceLeakPeriod=true")
+
+          total=$(echo "$response" | jq '.total')
 
           echo "Code Smells found: $total"
 
