ci: fix check code smells in sonar addin pr number

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,12 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           SONAR_ORG=jtristante
-          SONAR_PROJECT_KEY=jtristante_dca-api
+          SONAR_PROJECT_KEY=jtristante_dca-api 
+          PR_NUMBER=${{ github.event.pull_request.number }}
 
-          echo "Fetching Code Smells from SonarCloud..."
+          echo "Fetching Code Smells from SonarCloud for PR #$PR_NUMBER..."
           response=$(curl -s -u "$SONAR_TOKEN": \
-            "https://sonarcloud.io/api/issues/search?organization=$SONAR_ORG&projects=$SONAR_PROJECT_KEY&types=CODE_SMELL&resolved=false&severities=MINOR,MAJOR,CRITICAL&sinceLeakPeriod=true")
+            "https://sonarcloud.io/api/issues/search?organization=$SONAR_ORG&projects=$SONAR_PROJECT_KEY&types=CODE_SMELL&resolved=false&severities=MINOR,MAJOR,CRITICAL&sinceLeakPeriod=true&pullRequest=$PR_NUMBER&ps=500"")
 
           total=$(echo "$response" | jq '.total // 0')
           echo "Code Smells found: $total"
